--- a/GroupCalendarProject/app/src/main/res/values/strings.xml
+++ b/GroupCalendarProject/app/src/main/res/values/strings.xml
@@ -23,4 +23,17 @@
     </string>
 
 
+    <string name="welcome">Theme Example</string>
+
+    <string-array name="themes">
+        <item>Theme1</item>
+        <item>Theme2</item>
+    </string-array>
+
+    <string name="OK">OK</string>
+    <string name="def_theme">Theme1</string>
+    <string name="theme_summary">Appearance</string>
+    <string name="theme_dialog_title">Theme</string>
+    <string name="settings">Settings</string>
+
 </resources>
